# AI-ECO

./: Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  smithery.yaml
app/: Procfile  main.py
app/eco_server/: server.py
src/: index.css  main.tsx
src/services/: api.ts
